# Rustic-Compiler

./: CMakeLists.txt  README.md
lib-debug/: CMakeLists.txt  Debug.h
lib-scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h
lib-token/: CMakeLists.txt  StateMachine.cpp  StateMachine.h  Token.cpp  Token.h
src/: CMakeLists.txt  Main.cpp  code.txt
